<resources>
    <string name="app_name">ANDEmployees</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="employees_fragment">Hello contacts fragment</string>
    <string name="notice_fragment">준비중입니다.</string>
    <string name="anonymous_fragment">준비중입니다.</string>
    <string name="title_activity_employees">직원목록</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_employee_detail">EmployeeDetailActivity</string>
    <string name="title_activity_memo">MemoActivity</string>
    <string name="login_activity">AND</string>
    <string name="change_password_activity">비밀번호 변경</string>

    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_confirm">비밀번호 확인</string>
    <string name="prompt_email">이메일 주소</string>

    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="action_change_password">비밀번호 변경</string>

    <string name="basic_profile_url">https://kin-phinf.pstatic.net/20150101_166/1420120327193oRCl2_JPEG/1407920943510.jpg?type=w750</string>

    <string name="hint_employees_search">검색할 이름을 입력해주세요.</string>




    <string name="server_error">서버 통신에 에러가 발생하였습니다.</string>
    <string name="alert_delete">삭제하시겠습니까</string>
    <string name="ok">확인</string>
    <string name="delete">삭제</string>
    <string name="keep">유지 </string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="back">뒤로</string>
    <string name="add">등록</string>
    <string name="more">더보기</string>
    <string name="update">수정</string>
    <string name="save">저장</string>
    <string name="hint_category">카테고리를 선택해주세요.</string>
    <string name="hint_title">제목을 입력해주세요.</string>
    <string name="hint_contents">내용을 입력해주세요.</string>
    <string name="hint_id_password">아이디와 비밀번호를 입력해주세요.</string>
    <string name="hint_comment">댓글을 입력해주세요.</string>
    <string name="hint_password">비밀번호를 입력해주세요.</string>
    <string name="hint_password_password_confirm">비밀번호와 비밀번호 확인을 모두 입력해주세요.</string>
    <string name="check_password">비밀번호를 확인해주세요.</string>
    <string name="change_password_ok">비밀번호가 변경되었습니다.</string>
    <string name="inconsistency_password">비밀번호가 서로 일치하지 않습니다.</string>


    <string name="memo_add">메모가 추가 되었습니다.</string>
    <string name="memo_update">메모가 수정되었습니다.</string>

    <string name="permission_call_ok">전화 권한이 허용되었습니다.</string>
    <string name="permission_call_fail">전화 권한을 허용해주세요.</string>

    <string name="extension_num_header">07046725</string>


    <string name="tab_title_departments">조직 현황</string>
    <string name="tab_title_notice">공지사항</string>
    <string name="tab_title_freeboard">자유게시판</string>

    <!--데이터 저장에 사용하는 KEY 값-->
    <string name="PREF_USER_ID">PREF_USER_ID</string>
    <string name="USER_ID">USER_ID</string>
    <string name="BOARD_ID">BOARD_ID</string>
    <string name="DEPARTMENT_ID">DEPARTMENT_ID</string>
    <string name="EMPLOYEE_ID">EMPLOYEE_ID</string>
    <string name="PROFILE_URL">PROFILE_URL</string>

    <!--CATEGORY_ID-->
    <string name="CATEGORY_ID_NOTICE">6797f061-c997-11ea-9982-20cf305809b8</string>
    <string name="CATEGORY_ID_CONGRATULATION">38509e8c-cb37-11ea-9982-20cf305809b8</string>
    <string name="CATEGORY_ID_FREE_BOARD">c95b5e80-d0d5-11ea-9982-20cf305809b8</string>

</resources>